@@ -1,3 +1,13 @@
+2024-07-22  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp.el (tramp-handle-file-remote-p): Extend docstring.
+
+	* tramp-integration.el (shortdoc): Add further examples of
+	`file-remote-p'.
+
+	* tramp-gvfs.el (tramp-gvfs-maybe-open-connection):
+	* tramp-sh.el (tramp-maybe-open-connection): Improve message.
+
 2024-07-15  Jim Porter  <jporterbugs@gmail.com>
 
 	* tramp.el (tramp-signal-process): Strip the "SIG" prefix when present.
